--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,3 +103,132 @@ section.banner button:hover {
     cursor: pointer;
     transform: scale(104%, 104%);
 }
+
+footer {
+    background-color: #000000;
+}
+
+footer section.container {
+    width: 90%;
+    margin: auto;
+    padding: 6rem 0 4rem 0;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+footer .logo img {
+    width: 70%;
+}
+
+footer .logo img:hover {
+    cursor: pointer;
+}
+
+footer .links {
+    display: flex;
+    flex-wrap: wrap;
+    flex-grow: 2;
+    justify-content: space-evenly;
+}
+
+footer .links ul li {
+    font-size: 1.5rem;
+    padding: 1.3rem;
+}
+
+footer .links ul li:hover {
+    color: #1ED760;
+    cursor: pointer;
+}
+
+footer .links ul .heading {
+    color: #919496;
+    font-weight: 700;
+    font-size: 1.3rem;
+}
+
+footer .links ul .heading:hover {
+    color: #919496;
+    cursor: text;
+}
+
+footer .social {
+    flex-grow: 1;
+    margin: 20px 0;
+}
+
+footer .social ul {
+    display: flex;
+    justify-content: center;
+}
+
+footer .social ul li {
+    font-size: 2.6rem;
+    background-color: #222326;
+    border-radius: 50%;
+    height: 5.5rem;
+    width: 5.5rem;
+    margin: 0 0.6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer .social ul li:hover {
+    color: #1ED760;
+    cursor: pointer;
+}
+
+footer .location {
+    width: 100%;
+    margin-top: 10rem;
+    display: flex;
+    justify-content: flex-end;
+    font-size: 1.2rem;
+    color: #919496;
+}
+
+footer .location:hover {
+    color: #1ED760;
+    cursor: pointer;
+}
+
+footer .location i {
+    align-self: center;
+}
+
+footer .location span {
+    padding: 0 1rem;
+}
+
+footer .extras {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+footer .extras ul {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 45px 0 0;
+}
+
+footer .extras ul li {
+    font-size: 1.1rem;
+    color: #919496;
+    padding: 0.5rem 1rem;
+}
+
+footer .extras ul li:hover {
+    color: #1ED760;
+    cursor: pointer;
+}
+
+footer .extras span {
+    font-size: 1.2rem;
+    color: #919496;
+    padding-right: 1rem;
+    align-self: center;
+}
