--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -6,23 +6,65 @@
         background-size: 153%;
         background-position: right 40% center;
     }
+
     section.banner h1 {
         font-size: 10rem;
     }
 }
 
 @media (max-width: 768px) {
+    header {
+        height: 60px;
+    }
+
+    header .logo img {
+        height: 30px;
+    }
+
+    header nav.desktop-menu {
+        display: none;
+    }
+
+    header nav.mobile-menu {
+        display: inline;
+    }
+
     section.banner h1 {
         font-size: 6rem;
     }
+
+    footer .links {
+        width: 100%;
+        margin: 2rem auto;
+        flex-direction: column;
+    }
+
+    footer .company,
+    footer .communities,
+    footer .useful-links {
+        margin-top: 2rem;
+    }
+
+    footer .extras span {
+        margin-top: 2rem;
+    }
 }
 
-@media (min-width: 480px) {
+@media (max-width: 480px) {
+    header {
+        height: 50px;
+    }
+
+    header .logo img {
+        height: 25px;
+    }
+
     section.banner {
         background-image: url('./../images/main-mobile.svg');
         background-size: 195%;
         background-position: center top 50%;
     }
+
     section.banner h1 {
         font-size: 5rem;
     }
